k8s/applications/web/pedrobot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: pedro-bot
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo
