k8s/applications/web/pedrobot/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pedro-bot
  namespace: pedro-bot
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - "pedro.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pedro-bot
          port: 3000
